UTS 3/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalori-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kalori-backend
  template:
    metadata:
      labels:
        app: kalori-backend
    spec:
      containers:
      - name: kalori-app
        image: nzaidan/kalori-tracker:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
          limits:
            cpu: 500m
