UTS 3/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalori-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kalori-db
  template:
    metadata:
      labels:
        app: kalori-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
