UTS 3/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kalori-backend-service
spec:
  type: LoadBalancer
  selector:
    app: kalori-backend
  ports:
  - port: 80
    targetPort: 80
