UTS 3/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kalori-db-service
spec:
  selector:
    app: kalori-db
  ports:
  - port: 5432
    targetPort: 5432
