UTS 3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kalori-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: kalori-tracker.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kalori-backend-service
            port:
              number: 80
